# air2stream

./: .gitignore  README.md
notebooks/: repro_switzerland.ipynb
python/: .gitignore  README.md  kind_map  regen_wrapper.sh  reinstall_pkg.sh  requirements.txt  setup.py
python/air2stream/: _version.py  api.py  tseries.py
python/air2stream/native/: a2s.py
src/: A2S.py  AIR2STREAM_INPUTS.f90  AIR2STREAM_MAIN.f90  AIR2STREAM_MODULES.f90  AIR2STREAM_READ.f90  AIR2STREAM_RUNMODE.f90  AIR2STREAM_SUBROUTINES.f90  CMakeLists.txt  a2s.py  f90wrap_AIR2STREAM_MODULES.f90  f90wrap_toplevel.f90
